--- a/gradle.properties
+++ b/gradle.properties
@@ -33,3 +33,4 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+unsplash_access_key=ShGlshWl3ErGh_AxEP8dnbQH-Ehub3CmJ4dnNuOovIE
